--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appnope==0.1.2
+autopep8==1.5.7
 backcall==0.2.0
 cchardet==2.1.7
 certifi==2021.5.30
@@ -20,12 +21,14 @@ pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.19
 ptyprocess==0.7.0
+pycodestyle==2.7.0
 Pygments==2.9.0
 python-dateutil==2.8.1
 pyzmq==22.1.0
 requests==2.25.1
 selenium==3.141.0
 six==1.16.0
+toml==0.10.2
 tornado==6.1
 traitlets==5.0.5
 urllib3==1.26.6
