--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ prompt-toolkit==3.0.19
 ptyprocess==0.7.0
 pycodestyle==2.7.0
 Pygments==2.9.0
+pymongo==3.12.1
 python-dateutil==2.8.1
 pyzmq==22.1.0
 requests==2.25.1
